--- a/app/src/main/res/layout/fragment_application_list.xml
+++ b/app/src/main/res/layout/fragment_application_list.xml
@@ -4,12 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/applications_recycler"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:padding="8dp" />
+        android:fillViewport="true"
+        android:paddingBottom="80dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/applications_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:padding="8dp"
+            android:nestedScrollingEnabled="true" />
+
+    </androidx.core.widget.NestedScrollView>
 
     <TextView
         android:id="@+id/empty_text"
