--- a/app/src/main/res/layout/fragment_opportunities.xml
+++ b/app/src/main/res/layout/fragment_opportunities.xml
@@ -31,14 +31,24 @@
             app:layout_constraintTop_toBottomOf="@id/search_view">
         </com.google.android.material.chip.ChipGroup>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/opportunities_recycler"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:clipToPadding="false"
-            android:padding="8dp"
+            android:fillViewport="true"
+            android:paddingBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/filter_chip_group" />
+            app:layout_constraintTop_toBottomOf="@id/filter_chip_group">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/opportunities_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:padding="8dp"
+                android:nestedScrollingEnabled="true" />
+
+        </androidx.core.widget.NestedScrollView>
+
         <LinearLayout
             android:id="@+id/mainContent"
             android:layout_width="match_parent"
